Image spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ url('https://fonts.googleapis.com/css?family=Raleway:300,400,700,900');
 * {
     box-sizing: border-box;
     transition: all ease-in-out 200ms;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -247,6 +248,7 @@ nav a:focus {
     top: .8em;
     background-color: #232323;
     padding: 0 .145em;
+    text-transform: uppercase;
 }
 
 @media (min-width: 25rem) {
@@ -294,6 +296,10 @@ nav a:focus {
     margin: 3em 0 0;
 }
 
+.portfolio h1 {
+    font-weight: 700;
+}
+
 .portfolio-item {
     margin: 0;
     position: relative;
@@ -301,6 +307,7 @@ nav a:focus {
 
 .portfolio-item img {
     display: block;
+    width: 100%;
 }
 
 .portfolio-description {
@@ -327,7 +334,7 @@ nav a:focus {
 
 @media (min-width: 65rem) {
     .portfolio-item {
-        width: 33.3333334%;
+        width: 33.333%;
         overflow: hidden;
     }
 
